--- a/.github/workflows/Lint.yml
+++ b/.github/workflows/Lint.yml
@@ -9,7 +9,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: psf/black@stable
         with:
-          options: "--check --verbsoe"
+          options: "--check --verbose"
           src: "./src"
           version: "21.5b1"
           
